<resources>
    <string name="app_name">FreeStyle</string>

    <!-- Strings related to login -->

    <string name="prompt_email">账号/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_qq_sign_in">QQ登录</string>
    <string name="action_sign_up">注册</string>
    <string name="title_icon">FreeStyle</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_profile">profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_filter">选择滤镜</string>

    <string name="title_activity_filterlist">filterlist</string>
    <string name="tab_text_1">热度最高</string>
    <string name="tab_text_2">最近使用</string>
    <string name="tab_text_3">我的收藏</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="user_center">用户中心</string>
    <string name="gallery_choose"> 相册选图</string>
    <string name="camera_choose"> 拍摄图片</string>
    <string name="finish_render">渲染完成</string>
    <string name="abandon">放弃</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="publish">发布</string>

</resources>
